--- a/src/main/resources/template/students/list.html
+++ b/src/main/resources/template/students/list.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Estudantes</title>
 </head>
 <body>
+<h1>Todos estudantes cadastrados:</h1>
 
+<ul>
+    <li th:each="student : students" th:text="$student"></li>
+</ul>
 </body>
 </html>
