--- a/src/main/resources/template/students/form.html
+++ b/src/main/resources/template/students/form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Formulário</h1>
 </body>
 </html>
