criação do forrmulário para registro de empresas e mudanças no controller de estudantes
Criei o formulário e controller para o CRUD de empresas e corrigi alguns bugs no controller de estudante

--- a/src/main/resources/styles/main.css
+++ b/src/main/resources/styles/main.css
@@ -1,12 +1,9 @@
-<<<<<<< Updated upstream
-=======
-@import 'theme.css';
+@import './theme.css';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    cursor: default;
 }
 
 /* Body */
@@ -71,7 +68,6 @@ footer {
 }
 
 
->>>>>>> Stashed changes
 a {
     text-decoration: none;
 }
