--- a/src/main/resources/templates/companies/form.html
+++ b/src/main/resources/templates/companies/form.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <title>Formulário de cadastro</title>
+    <title>Cadastrar-se</title>
+    <link rel="icon" sizes="32x32" href="/imgs/icons8-navio-48.png" th:href="@{/imgs/icons8-navio-48.png}">
+
+    <link rel="icon" sizes="32x32" href="/imgs/icons8-navio-48.png">
+    <link rel="stylesheet" href="/static/styles/form.css">
+
 </head>
-<body>
+
+<body class="main-screen">
+<div class="card-main">
+
+    <div class="main-content">
+        <h1>Cadastrar-se</h1>
+        <form th:action="@{/company/save}" method="post" th:object="${company}">
+
+            <!--<input id="input-id" class="input-form" type="hidden" th:field="*{id}"/>
+-->
+            <label for="fantasyNameInput">
+                Nome Fantasia
+            </label>
+            <!-- required -->
+            <input type="text" id="fantasyNameInput" class="input-form" th:field="*{fantasyName}">
+
+            <label for="cnpjInput">
+                Cnpjoto
+            </label>
+
+            <!-- required -->
+            <input type="text" id="cnpjInput" class="input-form" th:field="*{cnpj}">
+            <label for="emailInput">
+                email
+            </label>
+
+            <!-- required -->
+            <input type="text" id="emailInput" class="input-form" th:field="*{email}">
+            <label for="phoneNumberInput">
+                telefone
+            </label>
+
+            <!-- required -->
+            <input type="text" id="phoneNumberInput" class="input-form" th:field="*{phoneNumber}">
+            <label for="personContactInput">
+                Responsável
+            </label>
+
+            <!-- required -->
+            <input type="text" id="personContactInput" class="input-form" th:field="*{personContact}">
+            <label for="addressInput">
+                Endereço
+            </label>
+
+            <!-- required -->
+            <input type="text" id="addressInput" class="input-form" th:field="*{address}">
+
+            <label for="principalActivityInput">
+                Principal Atividade
+            </label>
+            <!-- required -->
+            <input type="text" id="principalActivityInput" class="input-form" th:field="*{principalActivity}">
+            <label for="urlPageInput">
+                site
+            </label>
+
+
+            <input type="text" id="urlPageInput" class="input-form" th:field="*{urlPage}">
+            <button class="submit-input" type="submit"> salvar</button>
+        </form>
+    </div>
+</div>
 
 </body>
+
 </html>
