--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editar Aluno</title>
+  <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
+
 </head>
 <body>
 <h1>Editar Aluno</h1>
