--- a/src/main/resources/static/styles/principal-page.css
+++ b/src/main/resources/static/styles/principal-page.css
@@ -1,29 +1,5 @@
-@import './theme.css';
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Body */
-body {
-    font-family: var(--font-family);
-    font-size: 16px;
-    color: var(--secondary-color);
-}
-
-/* Header */
-header {
-    background-color: var(--primary-color);
-    padding: 20px 0;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
+@import url("main.css");
+    
 .login-register {
     float: right;
     font-size: 14px;
@@ -65,9 +41,4 @@ footer {
     background-color: var(--primary-color);
     padding: 20px 0;
     text-align: center;
-}
-
-
-a {
-    text-decoration: none;
 }
