--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -7,6 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Empresas</title>
+    
+    <link rel="stylesheet" th:href="@{/styles/list.css}">
+    <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
+
 </head>
 
 <body class="main-screen">
