--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -4,31 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulário de cadastro</title>
-<<<<<<< Updated upstream
-</head>
-<body>
-    <h1>Cadastrar Aluno</h1>
-    <form th:action="@{/student/save}" method="post" th:object="${student}">
-        <input type="hidden" th:field="*{id}"/>
-        Nome: <input type="text" th:field="*{name}"/><br/> <br/>
-        Matrícula: <input type="text" th:field="*{enrollment}"/><br/><br/>
-        Curso: <input type="text" th:field="*{course}"/><br/><br/>
-        Data de Nascimento: <input type="text" th:field="*{birthdate}"/><br/><br/>
-        Número de telefone: <input type="text" th:field="*{phoneNumber}"/><br/><br/>
-        Nome de Usuário: <input type="text" th:field="*{username}"/><br/> <br/>
-        Email: <input type="text" th:field="*{email}"/><br/><br/>
-        Senha: <input type="password" th:field="*{password}"/><br/><br/>
-        Competências:
-        <label th:each="competence : ${T(br.edu.pweb2.incruise.model.Competence).values()}">
-            <input type="checkbox" th:field="*{competenceList}" th:value="${competence}" th:checked="${student.competenceList.contains(competence)}"/>
-            <span th:text="${competence.getDescription()}"></span>
-        </label><br/><br/>
-        <input type="submit" value="Salvar">
-    </form>
-=======
-    <link rel="icon" sizes="32x32" href="/imgs/icons8-navio-48.png" th:href="@{/imgs/icons8-navio-48.png}">
-    <link rel="icon" sizes="32x32" href="/imgs/icons8-navio-48.png">
-    <link rel="stylesheet" href="/static/styles/form.css">
+    <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
+
+    <link rel="stylesheet" th:href="@{/styles/form.css}">
 
 </head>
 
@@ -81,7 +59,6 @@
         </div>
     </div>
 
->>>>>>> Stashed changes
 </body>
 
 </html>
