--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -23,7 +23,7 @@
                 <label class="label-form" for="input-enrollment">Matrícula</label>
                 <input id="input-enrollment" class="input-form" type="text" th:field="*{enrollment}" />
 
-                <label class="label-form" for="input-course">Cursp</label>
+                <label class="label-form" for="input-course">Curso</label>
                 <input id="input-course" class="input-form" type="text" th:field="*{course}" />
 
                 <label class="label-form" for="input-birthdate">Data de Nascimento</label>
