--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -10,7 +10,8 @@
 body {
     font-family: var(--font-family);
     font-size: 16px;
-    /* color: var(--secondary-color); */
+    background: var(--body-color-default);
+
 }
 
 /* Header */
@@ -19,8 +20,17 @@ header {
     padding: 20px 0;
 }
 
-a {
+a{
     text-decoration: none;
+    color: var(--links-color);
+    transition: ease-in all 0.5s;
+
+}
+
+a:hover{
+    color: var(--neutral-color-dark-state-gray);
+    font: bold;
+    text-decoration: underline;
 }
 /* Classes*/
 .container {
