--- a/src/main/resources/static/styles/theme.css
+++ b/src/main/resources/static/styles/theme.css
@@ -1,6 +1,19 @@
 :root {
     /*Cores específicas*/
-    --first-info-color: #F5F5F5;
+    --body-color-default:#fffcfc;
+
+    /*tags*/
+    --links-color: #2a318e;
+    /*info pages colors*/
+    --info-background: var(--secondary-color-gray);
+    --info-section-border: 2px solid var(--secondary-color-dark);
+    --oportunity-card-background: var(--secondary-color-gray);
+    --oportunity-card-background-hover: var(--neutral-color-dark);
+    --oportunity-card-color-hover: #feffff;
+
+
+    
+    
     /*Palheta*/
     --primary-color: #0073b7;
     /* Azul escuro */
@@ -18,6 +31,8 @@
     --secondary-color-dark: #e5e5e5;
     /* Cinza claro */
 
+
+    --secondary-color-gray:#dddada;
     /* Cores de destaque */
     --accent-color: #ff9800;
     /* Laranja */
@@ -29,9 +44,9 @@
     /* Cores neutras */
     --neutral-color: #333333;
 
-    --neutral-color-light: #666666;
+    --neutral-color-dark: #666666;
 
-    --neutral-color-dark: #999999;
+    --neutral-color-light: #ccc8c8;
 
     --grey-neutral-color: hsl(0, 0%, 20%);
 
@@ -60,6 +75,7 @@
 
 
     /* Fonts*/
-    --font-family: bold;
+    --info-font-family:sans-serif;
+    --font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
