--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome da Empresa</title>
+    <title >
+        [[${company.fantasyName}]]
+    </title>
 
-    <link rel="stylesheet" href="styles/info.css">
+    <link rel="stylesheet" th:href="@{/styles/info.css}">
+    <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
+
 
 </head>
 
 <body>
-    <section class="info-section" id="first-info">
+    <!-- <section class="info-section" id="first-info">
 
         <img src="imgs/enterprise-default.png">
-        <h1 id="name"> Nome da Empresa</h1>
+        <h1 id="name"> [[${company.fantasyName}]]</h1>
     </section>
     <section class="info-section" id="activity-section">
         <div class="topic">
             <h1 class="topic-title"> Principal atividade</h1>
-            <p class="topic-content">Breve descrição das atividades desempenhadas</p>
+            <p class="topic-content">[[${company.principalActivity}]]</p>
         </div>
     </section>
     <section class="info-section" id="basic-section">
@@ -30,25 +34,25 @@
 
             <div class="topic">
                 <h1 class="topic-title">Nome Fantasia</h1>
-                <p class="topic-content">Crop Devs</p>
+                <p class="topic-content"> [[${company.fantasyName}]]</p>
             </div>
 
             <div class="topic">
                 <h1 class="topic-title">CNPJ</h1>
-                <p class="topic-content">50.809.505/0001-70</p>
+                <p class="topic-content"> [[${company.cnpj}]]</p>
             </div>
 
         </div>
 
         <div class="topic">
             <h1 class="topic-title">Endereco</h1>
-            <p class="topic-content">Rua Antonio Carlos via Bandeira, Bairro Luís Henrique Cardoso N 43B</p>
+            <p class="topic-content"> [[${company.address}]]</p>
         </div>
         <div class="topic">
             <h1 class="topic-title">Site</h1>
             <p class="topic-content"><a
-                    href="https://www.cropredyfc.com/news/crop-devs-back-to-winning-ways-in-style-2767047.html"
-                    target="_blank"> link para o site no href</a></p>
+                    th:href="@{company.urlpage}"
+                    target="_blank"> [[${company.urlpage}]]</a></p>
         </div>
 
     </section>
@@ -61,19 +65,19 @@
 
                 <div class="topic">
                     <h1 class="topic-title"> Email</h1>
-                    <p class="topic-content">Empresa.ano@gmail.com</p>
+                    <p class="topic-content"> [[${company.email}]]</p>
                 </div>
 
                 <div class="topic">
                     <h1 class="topic-title">Telefone</h1>
-                    <p class="topic-content">(83) 91111-2222</p>
+                    <p class="topic-content"> [[${company.phoneNumber}]]</p>
                 </div>
 
             </div>
 
             <div class="topic">
                 <h1 class="topic-title">Pessoa Contato</h1>
-                <p class="topic-content"> José Aquino Borges</p>
+                <p class="topic-content"> [[${company.personContact}]]</p>
             </div>
 
         </div>
@@ -82,42 +86,27 @@
     <section class="info-section" id="oportunity-section">
         <h2 class="section-title"> Oportunidades </h2>
 
-        <div class="flex row">
-            <div class="opportunity-card">
-                <h2 class="topic-title">Desenvolvedor Front-End</h2>
+        <div class="flex row" >
+            <div class="opportunity-card" th:each="vacancy :${company.vacancyList}">
+                <h2 class="topic-title">[[${vacancy.principalActivity}]]</h2>
 
                 <p><span class="bolder">Remuneração: </span>
-                    <span>R$500.30</span>
+                    <span>[[${vacancy.remunerationValue}]]</span>
                 </p>
 
                 <p><span class="bolder">Quantidade de Vagas: </span>
-                    <span>2 Vagas</span>
+                    <span>[[${vacancy.quanty}]] Vagas</span>
                 </p>
                 <p><span class="bolder">Carga Horária: </span>
-                    <span>20 Horas/Semana</span></p>
+                    <span>[[${vacancy.workloadSemanal}]]</span></p>
                 <p>
                 
             </div>
 
-            <div class="opportunity-card">
-                <h2 class="topic-title">Desenvolvedor Back-End</h2>
-
-                <p><span class="bolder">Remuneração: </span>
-                    <span>  R$ 1467.92</span>
-                </p>
-
-                <p><span class="bolder">Quantidade de Vagas: </span>
-                    <span>1 Vaga</span>
-                </p>
-                <p><span class="bolder">Carga Horária: </span>
-                    <span>25 Horas/Semana</span></p>
-                <p>
-                
-            </div>
         </div>
 
     </section>
-
+ -->
 </body>
 
 </html>
