Cadastro e listagems feitos

--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -6,52 +6,46 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Empresas</title>
-    
+    <title>Ofertas de Estágio</title>
+
     <link rel="stylesheet" th:href="@{/styles/list.css}">
     <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
-
 </head>
 
 <body class="main-screen">
 
 <div class="card-component">
-    <h1> Todas Empresas cadastradas</h1>
+    <h1> Todas as Ofertas de Estágio Cadastradas</h1>
 
-    <a th:href="@{/company/register}">
+    <a th:href="@{/internshipOffer/register}">
         <button class="button-add">
-            Nova Empresa
+            Nova Oferta
         </button>
     </a>
+
     <table>
         <thead>
         <tr>
             <th>ID</th>
-            <th>Nome Fantasia</th>
-            <th>CNPJ</th>
-            <th>principal Atividade</th>
-            <th>Email</th>
-            <th>Telefone</th>
-            <th>Pessoa p/ Contato</th>
-            <th>Endereço</th>
-            <th>Página</th>
+            <th>Principal Atividade</th>
+            <th>Carga Horária Semanal</th>
+            <th>Valor da Bolsa</th>
+            <th>Vale Transporte</th>
+            <th>Pré-requisitos</th>
             <th>Ações</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="company :${companies}">
-            <td>[[${company.id}]]</td>
-            <td th:text="${company.fantasyName}"></td>
-            <td th:text="${company.cnpj}"></td>
-            <td th:text="${company.principalActivity}"></td>
-            <td th:text="${company.email}"></td>
-            <td th:text="${company.phoneNumber}">td>
-            <td th:text="${company.personContact}">td>
-            <td th:text="${company.address}">td>
-            <td th:text="${company.urlPage}">td>
+        <tr th:each="offer :${offers}">
+            <td>[[${offer.id}]]</td>
+            <td th:text="${offer.principalActivity}"></td>
+            <td th:text="${offer.weeklyWorkload}"></td>
+            <td th:text="${offer.remunerationValue}"></td>
+            <td th:text="${offer.transportVoucher}"></td>
+            <td th:text="${offer.prerequisites}"></td>
             <td>
                 <div class="action-box">
-                    <form th:action="@{/company/delete/{id}(id=${company.id})}" method="post">
+                    <form th:action="@{/internshipOffer/delete/{id}(id=${offer.id})}" method="post">
                         <input type="hidden" name="_method" value="DELETE"/>
                         <input class="input-delete" type="submit" value="Remover"/>
                     </form>
@@ -63,3 +57,4 @@
 
 </div>
 </body>
+</html>
