--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -16,7 +16,7 @@
 <body class="main-screen">
 
 <div class="card-component">
-    <h1> Todas Empresas cadastradas</h1>
+    <h1> Todas as Empresas Cadastradas</h1>
 
     <a th:href="@{/company/register}">
         <button class="button-add">
