Criação das páginas de Empresa e melhorias na página inicial

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: default;
 }
 
 /* Body */
@@ -73,3 +74,4 @@ justify-content: center;
 .bolder{
     font-weight: bolder;
 }
+
