--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -2,79 +2,86 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >
-        [[${company.fantasyName}]]
-    </title>
-
-    <link rel="stylesheet" th:href="@{/styles/info.css}">
-    <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
-
+    <meta th:insert="~{/fragments/headfiles(title='Incruise - [[${company.fantasyName}]]')}">
+    
+    <!-- <link rel="stylesheet" th:href="@{/styles/info.css}"> -->
+    <link rel="stylesheet" href="../../static/styles/info.css">
 
 </head>
 
-<body>
-    <!-- <section class="info-section" id="first-info">
+<header>
+    <div th:replace="~{/fragments/header}">        
+    </div>
+</header>
 
-        <img src="imgs/enterprise-default.png">
-        <h1 id="name"> [[${company.fantasyName}]]</h1>
+<body>
+    
+    <section class="info-section" id="first-info">
+        <img src="../../static/imgs/default/enterprise-default.png">
+        <!-- <img th:href="/imgs/enterprise-default.png"> -->
+        <h1 id="name"th:text="${company.fantasyName}">Text Content Default </h1>
     </section>
+
     <section class="info-section" id="activity-section">
+     
         <div class="topic">
             <h1 class="topic-title"> Principal atividade</h1>
-            <p class="topic-content">[[${company.principalActivity}]]</p>
+            <p class="topic-content" th:text="${company.principalActivity}">Text Content Default Text Content Default Text Content Default</p>
         </div>
+
     </section>
+    
     <section class="info-section" id="basic-section">
 
         <h2 class="section-title"> Dados da Empresa</h2>
-
+        
         <div class="flex around ">
-
+            
             <div class="topic">
-                <h1 class="topic-title">Nome Fantasia</h1>
-                <p class="topic-content"> [[${company.fantasyName}]]</p>
+                <h1 class="topic-title">Oportunidades Cadastradas</h1>
+                <p class="topic-content"> <span th:text="${lists.size(company.opportunityList)}">Text Content Default</span> Oportunidades</p>
             </div>
-
+            
             <div class="topic">
                 <h1 class="topic-title">CNPJ</h1>
-                <p class="topic-content"> [[${company.cnpj}]]</p>
+                <p class="topic-content" th:text="${company.cnpj}"> </p>
             </div>
-
+          
         </div>
-
+        
         <div class="topic">
             <h1 class="topic-title">Endereco</h1>
             <p class="topic-content"> [[${company.address}]]</p>
         </div>
-        <div class="topic">
-            <h1 class="topic-title">Site</h1>
+
+        <div class="topic" th:if="${company.urlpage != ''}">
+            <h1 class="topic-title">Site Oficial</h1>
             <p class="topic-content"><a
-                    th:href="@{company.urlpage}"
-                    target="_blank"> [[${company.urlpage}]]</a></p>
-        </div>
-
-    </section>
-
-    <section class="info-section" id="contact-section">
-
-        <h2 class="section-title"> Contato </h2>
-        <div class="flex collumn">
-            <div class="flex around ">
-
-                <div class="topic">
-                    <h1 class="topic-title"> Email</h1>
-                    <p class="topic-content"> [[${company.email}]]</p>
-                </div>
-
-                <div class="topic">
-                    <h1 class="topic-title">Telefone</h1>
-                    <p class="topic-content"> [[${company.phoneNumber}]]</p>
-                </div>
-
+                th:href="@{company.urlpage}"
+                target="_blank"> Clique aqui para acessar o site oficial</a></p>
             </div>
-
+            
+        </section>
+        
+        <section class="info-section" id="contact-section">
+            
+            <h2 class="section-title"> Contato </h2>
+            <div class="flex collumn">
+                <div class="flex around ">
+                    
+                    <div class="topic">
+                        <h1 class="topic-title"> Email</h1>
+                        <p class="topic-content"> [[${company.email}]]</p>
+                    </div>
+                    
+                    <div class="topic">
+                        <h1 class="topic-title">Telefone</h1>
+                        <p class="topic-content"> [[${company.phoneNumber}]]</p>
+                    </div>
+                    
+                </div>
+                
+        <!-- 
             <div class="topic">
                 <h1 class="topic-title">Pessoa Contato</h1>
                 <p class="topic-content"> [[${company.personContact}]]</p>
