--- a/src/main/resources/templates/fragments/headfiles.html
+++ b/src/main/resources/templates/fragments/headfiles.html
@@ -1,7 +1,6 @@
 <head th:fragment="headfiles(title)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -12,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <link rel="icon" th:href="@{/imagens/favicon.ico}" type="image/x-icon">
-
+   
+    <link rel="icon" th:href="@{/imgs/icons/incruise-icon.ico}" type="image/x-icon">
     <title th:text="${title} "></title>
     
 </head>
