--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org" lang="pt-br">
+<html xmlns:th="http://www.thymeleaf.org" lang="pt-br">
+
 <head>
+
     <meta th:insert="~{/fragments/headfiles(title='Incruise')}">
+    <link rel="stylesheet" href="./style.css">
+    </link>
 </head>
+
 <body>
-<header>
-    <div th:replace="~{/fragments/header}">        
-    </div>
-</header>
-<main>
-    <section class="about">
-        <h2>O que Somos?</h2>
+    <header>
+        <div th:replace="~{/fragments/header}">
+        </div>
+    </header>
+
+    <main>
+
+        <section class="introduction" th:style="'background:
+    linear-gradient(rgba(0,0,0,0.5), 
+    rgba(0,0,0,0.5)),
+    url('+ @{/imgs/backgrounds/principalCruise.png}+')'">
+
+            <div class="intro-text">
+                <h1>Incruise</h1>
+                <p>O Cruzeiro de Oportunidades</p>
+            </div>
+
+        </section>
+
+    <!-- Content -->
+
+    <section class="objective-section">
+        <h1>Nosso Objetivo</h1>
         <p>
-            Breve descrição sobre o sistema de divulgação de estágio, incluindo seus objetivos e benefícios.
+            O Incruise é um projeto sem fins lucrativos
+            A Igreja Ortodoxa de Gaza tem desempenhado um papel crucial ao cadastrar refugiados brasileiros na
+            cidade. A iniciativa destaca-se pela sua abordagem inclusiva e humanitária, proporcionando não apenas
+            assistência prática, mas também um sentido de comunidade e pertencimento aos recém-chegados. O cadastro
+            visa facilitar a integração dos refugiados na sociedade local, fornecendo acesso a recursos essenciais,
+            orientação e apoio emocional. Essa ação não apenas evidencia a generosidade da Igreja Ortodoxa, mas
+            também destaca a importância de parcerias interculturais na promoção da solidariedade global.
         </p>
+
     </section>
-    <section class="description">
-        <h2>Descrição</h2>
-        <p>
-            Breve descrição sobre as funcionalidades do sistema, como:
-            * Cadastro de empresas e vagas
-            * Busca por vagas
-            * Candidatura a vagas
-            * Acompanhamento de candidaturas
-        </p>
-    </section>
-</main>
-<footer>
-    <div class="container">
-        <p>Copyright &copy; 2024 - Incruise</p>
-    </div>
-</footer>
+    </main>
+
+    <footer>
+
+        <div th:replace="~{/fragments/footer}"></div>
+
+    </footer>
 </body>
+
 </html>
