--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -2,12 +2,8 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Empresas</title>
-    
+    <meta th:insert="~{/fragments/headfiles(title='Empresas')}">
+
     <link rel="stylesheet" th:href="@{/styles/list.css}">
     <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
 
