--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -2,6 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="../../static/styles/form.css"/>
     <meta charset="UTF-8">
     <title>Formulário de cadastro</title>
     <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
@@ -12,7 +13,7 @@
 <body class="main-screen">
     <div class="card-main">
         <div class="main-content">
-            <h1>Cadastrar-se</h1>
+            <h1 class="title-page">Cadastrar-se</h1>
             <form th:action="@{/student/save}" method="post" th:object="${student}">
 
                 <input id="input-id" class="input-form" type="hidden" th:field="*{id}" />
@@ -41,16 +42,22 @@
                 <label class="label-form" for="input-senha">Senha</label>
                 <input id="input-senha" class="input-form" type="password" th:field="*{password}" />
 
-                <div class="label-competence">
+                <div >
                     <h3>Competências:</h3>
-                    <label th:each="competence : ${T(br.edu.pweb2.incruise.model.Competence).values()}">
-                        <input type="checkbox" th:field="*{competenceList}" th:value="${competence}"
-                            th:checked="${student.competenceList.contains(competence)}" />
-                        <span th:text="${competence.getDescription()}"></span>
-                    </label>
+
+                    <div class="label-competence">
+                        <label th:each="competence : ${T(br.edu.pweb2.incruise.model.Competence).values()}">
+                            <input type="checkbox" th:field="*{competenceList}" th:value="${competence}"
+                                   th:checked="${student.competenceList.contains(competence)}"/>
+                            <span th:text="${competence.getDescription()}"></span>
+                        </label>
+                    </div>
                 </div>
+                <div class="buttons-actions">
                 <input class="submit-input" type="submit" value="Salvar">
+            </div>
             </form>
         </div>
     </div>
+</body>
 </html>
