Página de escolher como se registrar
Pode-se registrar no sistema como Estudante ou como Empresa.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,6 +4,9 @@
             <img th:src="@{/imgs/logo.png}" alt="" width="30" height="24" class="d-inline-block align-text-top">
             <span class="logo-font">Incruise</span>
         </a>
+        <div >
+            <button type="button" th:onclick="|window.location.href='@{/choice-register}'|">Registro</button>
+        </div>
     </div>
     
 </nav>
