--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,15 +48,15 @@
 
                 <div class="row people">
                     <div class="col-md-6 col-lg-4 item">
-                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/u/1426341" alt="Allan Smith">
-                            <h3 class="name">Allan Smith</h3>
+                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/AllanSmithll" alt="Allan Amâncio">
+                            <h3 class="name">Allan Amâncio</h3>
                             <p class="title">Developer</p>
                             <p class="description"> </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 item">
-                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/u/87027617" alt="Haniel Costa">
+                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/HanielCostaDaSilva" alt="Haniel Costa">
                             <h3 class="name">Haniel Costa</h3>
                             <p class="title">Developer</p>
                             <p class="description"> </p>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 item">
-                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/u/4584594" alt="Márcio José">
+                        <div class="box"><img class="rounded-circle" src="https://avatars.githubusercontent.com/ImMarcio" alt="Márcio José">
                             <h3 class="name">Márcio José</h3>
                             <p class="title">Developer</p>
                             <p class="description"> </p>
